# file-shiwake-kun

./: .build-setup-summary.md  .gitignore  BUILD.md  INSTALL.md  PLATFORM_NOTES.md  QUICK_BUILD.md  README.md  RELEASE_CHECKLIST.md  STYLING_GUIDE.md  UI_UX_IMPROVEMENTS.md  config.json  design.md  index.html  main.py  main.spec  package-lock.json  package.json  requirements.txt  tailwind.config.js  tasks.md  vitest.config.ts
.github/workflows/: build.yml  release.yml
.kiro/specs/file-shiwake-kun/: design.md  requirements.md  tasks.md
data/: config_manager.py  file_operations.py  metadata_extractor.py
logic/: file_processor.py  rule_engine.py
scripts/: build-all.ps1  build-all.sh
src/: App.css  App.tsx  README.md  index.css  main.tsx
src-tauri/: Cargo.toml  file-shiwake-kun.desktop  tauri.conf.json
src-tauri/proptest-regressions/services/: config_manager_test.txt  file_operations_test.txt  file_processor_test.txt  preview_mode_test.txt  rule_engine_test.txt
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  tests.rs
src-tauri/src/models/: config.rs  conflict_resolution.rs  file_info.rs  metadata.rs  mod.rs  process_result.rs  rule.rs  tests.rs
src-tauri/src/services/: config_manager.rs  config_manager_test.rs  conflict_handling_test.rs  file_operations.rs  file_operations_test.rs  file_processor.rs  file_processor_test.rs  metadata_extractor.rs  metadata_extractor_test.rs  mod.rs  preview_mode_test.rs  rule_engine.rs  rule_engine_test.rs
src/api/: tauri.ts
src/components/: .gitkeep  ConflictDialog.test.tsx  ConflictDialog.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  MainWindow.test.tsx  MainWindow.tsx  PreviewDialog.test.tsx  PreviewDialog.tsx  ResultsViewer.test.tsx  ResultsViewer.tsx  SettingsPanel.property.test.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx  Toast.tsx  ToastContainer.tsx  index.ts
src/context/: AppContext.tsx  ViewContext.tsx  index.ts
src/hooks/: useToast.test.tsx  useToast.ts
src/types/: README.md  index.ts  models.ts
src/utils/: errorRecovery.ts  logger.ts
ui/: conflict_dialog.py  main_view.py  main_window.py  preview_window.py  results_view.py  rule_form_window.py  settings_window.py
