[package]
name = "file-shiwake-kun"
version = "0.1.0"
description = "ファイル仕訳け君 - Automatic File Organizer based on metadata"
authors = ["File Shiwake Kun Team"]
license = "MIT"
repository = "https://github.com/file-shiwake-kun/file-shiwake-kun"
homepage = "https://github.com/file-shiwake-kun/file-shiwake-kun"
edition = "2021"
rust-version = "1.91"
default-run = "file-shiwake-kun"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "file_shiwake_kun_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
kamadak-exif = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
dirs = "5.0"

[dev-dependencies]
proptest = "1.4"
tempfile = "3.8"
tokio = { version = "1", features = ["macros", "rt"] }


# Release profile optimization for smaller binary size and better performance
[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization at the cost of compile time
strip = true        # Strip symbols from binary
panic = "abort"     # Reduce binary size by removing unwinding code
